# NumBoxKeyboard

./: .gitignore  NumBoxKeyboard.qml  README.md  qmldir
.github/: FUNDING.yml
example/: CMakeLists.txt  example.pro  main.cpp  main.qml  qml.qrc
